<!-- Homework 1
activity_main.xml
Chandra Chudeswaran Sankar, Melissa Krausse -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:id="@+id/entered_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_weight_label"
            android:inputType="number" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/gender_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <Switch
            android:id="@+id/genderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/gender_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/gender_label_id"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sizeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveButton"
            android:text="@string/save_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/drink_size_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <RadioButton
                android:id="@+id/oz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_ounce_label"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/oz5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_ounce_label" />

            <RadioButton
                android:id="@+id/oz12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve_ounce_label" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alcohol_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <SeekBar
            android:id="@+id/alcoholPercent"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="25"
            android:progress="5" />

        <TextView
            android:id="@+id/percentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initial_percent_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/AddLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/addDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAdd"
            android:text="@string/add_drink_label" />

        <Button
            android:id="@+id/resetDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_label"
            android:onClick="reset"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/levelLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bac_level"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:id="@+id/bac_level"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:minHeight="50dp"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/status_label"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
             />

        <TextView

            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/status_label1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:background="@color/md_green_500"
          />


    </LinearLayout>

</LinearLayout>
